# ot-harjoitustyo

./: .coveragerc  .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py  test.py
data/: app.db  test_app.db
documentation/: architecture.md  changelog.md  manual.md  specification document.md  time_keeping.md
documentation/pictures/: package_diagram.drawio
laskarit/week1/: week1.md
laskarit/week2/maksukortti/: .coverage  pyproject.toml
laskarit/week2/maksukortti/src/: maksukortti.py
laskarit/week2/maksukortti/src/tests/: maksukortti_test.py
laskarit/week2/poetry-test/: pyproject.toml
laskarit/week2/unicafe/: .gitignore
laskarit/week3/: t1.md  t2.md
src/: asdas.py  config.py  database_connection.py  index.py  initialize_database.py
src/db/: db_setup.py  house_app.db  temporary_house_app.db
src/entities/: administrator.py  house.py  model.py  user.py
src/repositories/: admin_repository.py  administrator_repository.py  house_repository.py  model_repository.py  user_repository.py
src/services/: db_service.py  house_service.py
src/tests/: db_service_test.py  house_service_test.py
src/tests/entities/: user_test.py
src/tests/repositories/: administrator_repository_test.py  house_repository_test.py  model_repository_test.py  user_repository_test.py
src/tests/services/: db_service_test_old.py  house_service_test.py
src/ui/: administration_view.py  administrator_login_view.py  assessment_view.py  good_bye_view.py  hello_view.py  house_view.py  login_view.py  registration_view.py  ui.py
(+2 files in other folders)
